--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "quality.fashion"
     },
     "web": {
       "favicon": "./assets/favicon.png"
